graphql logo position fix on small screens

--- a/site/_css/index.less
+++ b/site/_css/index.less
@@ -125,6 +125,9 @@ body.index {
         display: block;
         width: 90px;
         height: 90px;
+        @media screen and (max-width: 768px) {
+          margin-top: 3rem;
+        }
       }
     }
 
